Check mailer and update Rails

--- a/config/site_settings/development.yml
+++ b/config/site_settings/development.yml
@@ -1,7 +1,6 @@
 ---
 Default Meta Description: manticore description
 Default Meta Tags: manticore, default, tags
-Email: paul@eskimosoup.co.uk
 Guiseley Address: Physio Med Guiseley, Aireborough Leisure Centre, The Green, Guiseley,
   Leeds, LS20 9BT
 Leeds Address: Physio Med Limited, Chartered House, Gelderd Road, Leeds, LS12 6DT
@@ -10,5 +9,6 @@ Leeds Fax: 0113 229 1310
 Guiseley Phone: 01943 876706
 Guiseley Fax: '0'
 Name: Physio Med Leeds
-Booking Request Email: paul@eskimosoup.co.uk
 Email CC: paul@optimised.today
+Booking Request Email: paul@optimised.today
+Email: paul@optimised.today
